force-app/main/default/objects/Session__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Maximum number of participants who can register for this session</description>
    <inlineHelpText>Maximum number of participants who can register for this session</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>