force-app/main/default/objects/Session__c/fields/Number_of_Registrants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Registrants__c</fullName>
    <label>Number of Registrants</label>
    <summaryForeignKey>Booking__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>