force-app/main/default/objects/Session__c/fields/Number_of_Remaining_Slots__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Remaining_Slots__c</fullName>
    <formula>Capacity__c -  Number_of_Registrants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Remaining Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>